--- a/application/views/index.html
+++ b/application/views/index.html
@@ -7,20 +7,30 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <section class="left">
+    <header>
         <h1>INSSSTA</h1>
-        <div class="isi">
-            <p>HOME</p>
-            <p>CREATE</p>
-            <p>PROFILE</p>
+    </header>
+    <section class="pembatas"></section>
+    <section class="one">
+        <div class="users">
+            <img src="squids foto.jpg" alt="" class="profile" width="50px" height="50px">
+            <p><strong>useraa</strong></p>
         </div>
-        <div class="down">
-            <p>More</p>
+        <div class="photo">
+            <img src="squids foto.jpg" alt="" width="430px" height="430px">
+            <p><strong>@userBB</strong> AAAAAAAAAAAA</p>
         </div>
     </section>
-    <section class="mainposts">
-        <img src="" alt="">
+    <section class="pembatas"></section>
+    <section class="two">
+        <div class="users">
+            <img src="squids foto.jpg" alt="" class="profile" width="50px" height="50px">
+            <p><strong>userBB</strong></p>
+        </div>
+        <div class="photo">
+            <img src="squids foto.jpg" alt="" width="430px" height="430px">
+            <p><strong>@useraa</strong> AAAAAAAAAAAA</p>
+        </div>
     </section>
-    <section class="right"></section>
 </body>
 </html>
