--- a/application/views/index.html
+++ b/application/views/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -33,4 +33,39 @@
         </div>
     </section>
 </body>
-</html>
+</html> -->
+
+{% block content %}
+    <div class="form-box" style="border:1px black solid;">
+        <h2>Create New Post</h2>
+        <form method="post" enctype="multipart/form-data">
+            {{ form.hidden_tag() }}
+            <div class="form-group">
+                {{ form.post_pic.label(class="form-control-label") }}
+                {{ form.post_pic(class="form-control-file") }}
+                {% for error in form.post_pic.errors %}
+                    <span class="text-danger">{{ error }}</span>
+                {% endfor %}
+            </div>
+            <div class="form-group">
+                {{ form.caption.label(class="form-control-label") }}
+                {{ form.caption(class="form-control") }}
+                {% for error in form.caption.errors %}
+                    <span class="text-danger">{{ error }}</span>
+                {% endfor %}
+            </div>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-primary") }}
+            </div>
+        </form>
+    </div>
+
+    <div class="post-container">
+        {% for post in posts %}
+            <div class="post" style="border: 1px blacksolid;" margin="10px 0px;">
+                <img src="{{ url_for('static', filename='' + post.photo) }}" alt="Post Image">
+                <p>{{ post.caption }}</p>
+            </div>
+        {% endfor %}
+    </div>
+{% endblock content %}
