--- a/application/views/index.html
+++ b/application/views/index.html
@@ -62,10 +62,19 @@
 
     <div class="post-container">
         {% for post in posts %}
-            <div class="post" style="border: 1px blacksolid;" margin="10px 0px;">
+            <div class="post">
                 <img src="{{ url_for('static', filename='' + post.photo) }}" alt="Post Image">
                 <p>{{ post.caption }}</p>
             </div>
+        {% endfor %}
+    </div>
+    <div class="pagination-box">
+        {% for page_number in posts.iter_pages() %}
+            {% if page_number == posts.page %}
+                <a href="{{ url_for('index', page=page_number) }}" style="color: black;">{{ page_number }}</a>
+            {% else %}
+                <a href="{{ url_for('index', page=page_number) }}" style="color: gray;">{{ page_number }}</a>
+            {% endif %}
         {% endfor %}
     </div>
 {% endblock content %}
