modified:   application/__pycache__/routes.cpython-311.pyc 	modified:   application/routes.py 	new file:   application/static/images/posts/31faf4af8a.png 	new file:   application/static/images/posts/3e12149f9a.jpg 	new file:   application/static/images/posts/874f70df5f.png 	new file:   application/static/images/posts/b32c191537.jpg 	new file:   application/static/images/posts/e6f2b25a6b.jpeg 	new file:   application/views/createPosts.html 	modified:   application/views/index.html 	modified:   application/views/layout.html 	modified:   application/views/login.html 	modified:   application/views/profile.html 	modified:   instance/data.db

--- a/application/views/login.html
+++ b/application/views/login.html
@@ -1,40 +1,41 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-    <div class="">
+    <div class="container">
         <form action="" method="post">
             {{ form.hidden_tag() }}
-            <fieldset class="">
-                <legend class="">Login</legend>
-
-                <div class="">
+            <center><h1>INSSSTA</h1></center>
+            <fieldset class="info" style="border: none;">
+                <div class="" >
                     {{ form.username.label(class="") }}
-
-                    {% if form.username.errors %}
-                        {{ form.username(class="") }}
-                        <div class="">
-                            {% for error in form.username.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.username(class="") }}
-                    {% endif %}
+                    <div class="">
+                        {% if form.username.errors %}
+                            {{ form.username(class="") }}
+                            <div class="">
+                                {% for error in form.username.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %} 
+                            {{ form.username(class="") }}
+                        {% endif %}
+                    </div>
                 </div>
 
                 <div class="">
                     {{ form.password.label(class="") }}
-
-                    {% if form.password.errors %}
-                        {{ form.password(class="") }}
-                        <div class="">
-                            {% for error in form.password.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.password(class=" ") }}
-                    {% endif %}
+                    <div class="">
+                        {% if form.password.errors %}
+                            {{ form.password(class="") }}
+                            <div class="">
+                                {% for error in form.password.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.password(class=" ") }}
+                        {% endif %}
+                    </div>
                 </div>
             </fieldset>
             <div class="">
