--- a/application/views/index.html
+++ b/application/views/index.html
@@ -35,36 +35,47 @@
 </body>
 </html> -->
 
-{% block content %}
-    <div class="form-box" style="border:1px black solid;">
-        <h2>Create New Post</h2>
-        <form method="post" enctype="multipart/form-data">
-            {{ form.hidden_tag() }}
-            <div class="form-group">
-                {{ form.post_pic.label(class="form-control-label") }}
-                {{ form.post_pic(class="form-control-file") }}
-                {% for error in form.post_pic.errors %}
-                    <span class="text-danger">{{ error }}</span>
-                {% endfor %}
-            </div>
-            <div class="form-group">
-                {{ form.caption.label(class="form-control-label") }}
-                {{ form.caption(class="form-control") }}
-                {% for error in form.caption.errors %}
-                    <span class="text-danger">{{ error }}</span>
-                {% endfor %}
-            </div>
-            <div class="form-group">
-                {{ form.submit(class="btn btn-primary") }}
-            </div>
-        </form>
-    </div>
+<style>
+    Body {  
+        /* background-color: pink;   */
+        width: 430px;
+        height: 932px;  
+    }     
 
+    h1{
+        text-align: center;
+        font-size: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        vertical-align: middle;
+        padding-top: 10px;
+    }
+    img>.profile{
+        border-radius: 25px;
+        width: 50px;
+        height: 50px;
+        /* border: none; */
+    }
+</style>
+
+{% block content %}
+    <header>
+        <h1>INSSSTA</h1>
+    </header>
     <div class="post-container">
+        {% for user in users %}
+            <div class="info">
+                <img src="{{ url_for('static', filename='' + user.profile_pic) }}" alt="">
+                <p>{{ user.username }}</p>
+            </div>
+        {% endfor %}
         {% for post in posts %}
             <div class="post">
                 <img src="{{ url_for('static', filename='' + post.photo) }}" alt="Post Image">
                 <p>{{ post.caption }}</p>
+                <p>{{ post.post_date }}</p>
             </div>
         {% endfor %}
     </div>
