--- a/application/views/layout.html
+++ b/application/views/layout.html
@@ -17,7 +17,7 @@
 
         section.content {
             min-height: calc(100vh = 100px);
-            width: 576px;
+            width: 430px;
             margin: 0 auto;
         }
 
@@ -46,7 +46,53 @@
             padding: 5px;
             margin-bottom: 30px;
         }
-        
+        .info {   
+            width: 100%;   
+            margin: 7px 0;  
+            padding: 12px 20px;   
+            display: inline-block;   
+            border: 1px solid gray;   
+            box-sizing: border-box;   
+        } 
+        footer{
+            width: 430px;
+            height: auto;
+            text-align: left;
+        }
+        a{
+            color: #5CA2E2;
+            text-decoration: solid;
+            text-align: right;
+        }
+
+        button {   
+            background-color: #5CA2E2;   
+            width: 100%;  
+            color: white;   
+            padding: 15px;   
+            margin: 10px 0px;   
+            border: none;   
+            cursor: pointer;   
+            }  
+        input[type=text], input[type=password] {   
+            width: 100%;   
+            margin: 7px 0;  
+            padding: 12px 20px;   
+            display: inline-block;   
+            border: 1px solid gray;   
+            box-sizing: border-box;   
+            }  
+        button:hover {   
+            opacity: 0.7;   
+            }   
+            
+        .container {   
+            padding: 25px;   
+            display: table-cell; 
+            text-align: center; 
+            vertical-align: middle; 
+            /* border: 2px solid black;  */
+            }   
     </style>
     {% if title %}
         <title>{{ title }} - Website</title>
