modified:   application/__pycache__/form.cpython-311.pyc 	modified:   application/__pycache__/routes.cpython-311.pyc 	modified:   application/form.py 	modified:   application/routes.py 	new file:   application/static/images/posts/a2d2e723de.png 	new file:   application/static/images/posts/bdaef9089b.png 	modified:   application/views/components/footer.html 	modified:   application/views/components/login-header.html 	modified:   application/views/components/logout-header.html 	modified:   application/views/createPosts.html 	modified:   application/views/editProfile.html 	modified:   application/views/index.html 	modified:   application/views/layout.html 	modified:   application/views/login.html 	modified:   application/views/profile.html 	modified:   application/views/signup.html 	new file:   ig.txt 	modified:   instance/data.db

--- a/application/views/components/footer.html
+++ b/application/views/components/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <p style="text-align: center;">Copyright &copy; <span id="pageYear"></span></p>
+    <center><p class="copyright">Copyright &copy; <span id="pageYear"></span></p></center>
     <script>
         const year = new Date().getFullYear();
         document.getElementById("pageYear").innerHTML = year;
