--- a/application/views/components/login-header.html
+++ b/application/views/components/login-header.html
@@ -1,14 +1,15 @@
 <header>
-    <img src="#" alt="logo">
+    <center><h1>INSSSTA</h1></center>
+    <!-- <img src="/11PROCOD/FLASK/meet15/application/static/images/squids.png" alt="logo"> -->
     <ul>
         <li>
-            <a href="{{ url_for('index') }}">Home</a>
+            <a href="{{ url_for('index') }}">HOME</a>
         </li>
         <li>
-            <a href="{{ url_for('profile', username=current_user.username)}}">Profile</a>
+            <a href="{{ url_for('profile', username=current_user.username)}}">PROFILE</a>
         </li>
         <li>
-            <a href="{{ url_for('logout') }}">Logout</a>
+            <a href="{{ url_for('logout') }}">LOGOUT</a>
         </li>
     </ul>
 </header>
