--- a/application/views/components/logout-header.html
+++ b/application/views/components/logout-header.html
@@ -1,6 +1,7 @@
 <header>
-    <img src="#" alt="logo">
-    <ul>
+    <!-- <center><h1>INSSSTA</h1></center> -->
+    <!-- <img class="logo" src="/11PROCOD/FLASK/meet15/application/static/images/squids.png" alt="logo"> -->
+    <!-- <ul>
         <li>
             <a href="{{ url_for('about') }}">About</a>
         </li>
@@ -10,5 +11,5 @@
         <li>
             <a href="{{ url_for('signup') }}">Signup</a>
         </li>
-    </ul>
+    </ul> -->
 </header>
