--- a/application/views/createPosts.html
+++ b/application/views/createPosts.html
@@ -1,3 +1,5 @@
+{% extends 'layout.html' %}
+
 {% block content %}
     <div class="form-box" style="border:1px black solid;">
         <h2>Create New Post</h2>
