--- a/application/views/editProfile.html
+++ b/application/views/editProfile.html
@@ -4,18 +4,64 @@
     <div class="">
         <form action="" method="post">
             {{ form.hidden_tag() }}
-            <fieldset class="">
-                <legend class="">Edit Profile</legend>
+            <fieldset class="" style="border: none;">
+                <legend class="editProfile">EDIT PROFILE</legend>
 
-                <div class="">
-                    <form method="POST" enctype="multipart/form-data">
-                        {{ form.csrf_token }}
-                        {{ form.profile_pic.label(class="") }}<br>
-                        {{ form.profile_pic }}<br><br>
-                        <input type="submit" value="Submit">
-                    </form>
+                <div class="" >
+                    {{ form.username.label(class="") }}
+                    
+                    {% if form.username.errors %}
+                        {{ form.username(class="") }}
+                        <div class="">
+                            {% for error in form.username.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.username(class="form-control") }}
+                    {% endif %}
                 </div>
 
+                <div class="" >
+                    {{ form.fullname.label(class="") }}
+                    
+                    {% if form.fullname.errors %}
+                        {{ form.fullname(class="") }}
+                        <div class="">
+                            {% for error in form.fullname.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.fullname(class="form-control") }}
+                    {% endif %}
+                </div>
+
+                <div class="" >
+                    {{ form.bio.label(class="") }}
+                    
+                    {% if form.bio.errors %}
+                        {{ form.bio(class="") }}
+                        <div class="">
+                            {% for error in form.bio.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.bio(class="form-control") }}
+                    {% endif %}
+                </div>
+
+                <div class="form-group">
+                    {{ form.profile_pic.label(class="form-control-label") }}
+                    {{ form.profile_pic(class="form-control-file") }}
+                    {% for error in form.profile_pic.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                    {% endfor %}
+                </div>
+                <div class="form-group">
+                    {{ form.submit(class="btn btn-primary") }}
+                </div>
             </fieldset>
         </form>
     </div>
