--- a/application/views/layout.html
+++ b/application/views/layout.html
@@ -24,6 +24,16 @@
         header ul li {
             display: inline-block;
         }
+        a{
+            font-weight: 600;
+        }
+        ul{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            margin-top: 18px;
+            font-weight: 600;
+        }
 
         div.new-post-box {
             padding: 5px;
@@ -38,6 +48,10 @@
 
         img {
             width: 550px;
+        }
+        .logo{
+            width: 50px;
+            height: 50px;
         }
 
         div.pagination.box {
@@ -56,13 +70,17 @@
         } 
         footer{
             width: 430px;
-            height: auto;
-            text-align: left;
+            /* text-align: left; */
+            /* text-align: center; */
+            /* align-items: center; */
         }
         a{
             color: #5CA2E2;
             text-decoration: solid;
             text-align: right;
+        }
+        h1{
+            text-align: center;
         }
 
         button {   
@@ -74,7 +92,7 @@
             border: none;   
             cursor: pointer;   
             }  
-        input[type=text], input[type=password] {   
+        input[type=text], input[type=password], input[type=email] {   
             width: 100%;   
             margin: 7px 0;  
             padding: 12px 20px;   
@@ -82,6 +100,16 @@
             border: 1px solid gray;   
             box-sizing: border-box;   
             }  
+        input[type=submit]{
+            width: 100%;
+            margin: 7px 0;  
+            padding: 12px 20px;   
+            display: inline-block;   
+            border: 1px solid #5CA2E2;   
+            color: white;
+            box-sizing: border-box;  
+            background-color: #5CA2E2; 
+        }
         button:hover {   
             opacity: 0.7;   
             }   
@@ -93,7 +121,9 @@
             vertical-align: middle; 
             /* border: 2px solid black;  */
             }   
-            .image-container {
+
+        /* PROFILE.HTML */
+        .image-container {
             display: flex;
             flex-wrap: wrap;
             max-width: 900px;
@@ -108,6 +138,20 @@
             overflow: hidden;
             border: 1px solid #ddd;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .createPosts{
+            flex: 0 0 calc(33.33% - 20px); /* Adjust the width and margin as needed */
+            margin: 10px;
+            box-sizing: border-box;
+            overflow: hidden;
+            border: 1px solid #ddd;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            background-color: #5CA2E2;
+        }
+        .toCreate{
+            color: white;
+            text-decoration: solid;
+            /* text-align: right;  */
         }
 
         .image-item img {
@@ -149,6 +193,21 @@
 
         .profile-info p {
             margin: 5px 0;
+        }
+        .copyright{
+            width: 430px;
+            /* height: auto; */
+            color: gray;
+            /* text-align: center; */
+        }
+        .forgot{
+            text-align: right;
+            font-size: 16px;
+        }
+        .editProfile{
+            text-align: center;
+            font-weight: 600;
+            padding-top: 20px;
         }
     </style>
     {% if title %}
