--- a/application/views/login.html
+++ b/application/views/login.html
@@ -40,7 +40,7 @@
             </fieldset>
             <div class="">
                 {{ form.submit(class="btn btn-outline-info") }}
-                <small class="">
+                <small class="forgot">
                     <a href="#">Forgot Password?</a>
                 </small>
             </div>
