--- a/application/views/signup.html
+++ b/application/views/signup.html
@@ -1,11 +1,11 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<div class="">
+<div class="container">
     <form method="POST" action="">
         {{ form.hidden_tag() }}
-        <fieldset class="">
-            <legend class="">Daftar</legend>
+        <fieldset class="" style="border: none;">
+            <h1 class="" style="text-align: center; font-size: 32px;">SIGN UP</h1>
 
             <div class="">
                 {{ form.username.label(class="") }}
