modified:   application/__pycache__/form.cpython-311.pyc 	modified:   application/__pycache__/model.cpython-311.pyc 	modified:   application/__pycache__/routes.cpython-311.pyc 	modified:   application/routes.py 	new file:   application/static/images/posts/8434b3d67f.jpg 	new file:   application/static/images/posts/a72bd509c5.jpg 	new file:   application/static/images/posts/dfed8a9cb2.jpeg 	new file:   application/static/images/squidwardCoffee.jpeg 	modified:   application/views/createPosts.html 	modified:   application/views/editProfile.html 	modified:   application/views/index.html 	modified:   application/views/layout.html 	modified:   application/views/profile.html 	modified:   instance/data.db

--- a/application/views/createPosts.html
+++ b/application/views/createPosts.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-    <div class="form-box" style="border:1px black solid;">
+    <div class="form-box" style="border:none;">
         <h2>Create New Post</h2>
         <form method="post" enctype="multipart/form-data">
             {{ form.hidden_tag() }}
