--- a/application/views/layout.html
+++ b/application/views/layout.html
@@ -31,8 +31,9 @@
             display: flex;
             flex-direction: row;
             justify-content: space-around;
-            margin-top: 18px;
+            padding-top: 10px;
             font-weight: 600;
+            padding-bottom: 10px;
         }
 
         div.new-post-box {
@@ -208,6 +209,13 @@
             text-align: center;
             font-weight: 600;
             padding-top: 20px;
+        }
+        .post-header{
+            display: flex;
+            gap: 10px;
+        }
+        .post-header img{
+            border-radius: 50%;
         }
     </style>
     {% if title %}
