--- a/application/views/editProfile.html
+++ b/application/views/editProfile.html
@@ -52,13 +52,16 @@
                     {% endif %}
                 </div>
 
-                <div class="form-group">
-                    {{ form.profile_pic.label(class="form-control-label") }}
-                    {{ form.profile_pic(class="form-control-file") }}
-                    {% for error in form.profile_pic.errors %}
-                        <span class="text-danger">{{ error }}</span>
-                    {% endfor %}
-                </div>
+                <form method="post" enctype="multipart/form-data">
+                    <div class="">
+                        <!-- {{ form.profile_pic.label(class="form-control-label") }} -->
+                        {{ form.profile_pic(class="form-control-file") }}
+                        {% for error in form.profile_pic.errors %}
+                            <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
+                    </div>   
+                </form>
+                
                 <div class="form-group">
                     {{ form.submit(class="btn btn-primary") }}
                 </div>
