modified:   application/__init__.py 	modified:   application/__pycache__/__init__.cpython-311.pyc 	modified:   application/__pycache__/form.cpython-311.pyc 	modified:   application/__pycache__/routes.cpython-311.pyc 	modified:   application/routes.py 	new file:   application/views/editPost.html 	new file:   application/views/forgotPassword.html 	modified:   application/views/index.html 	modified:   application/views/layout.html 	modified:   application/views/login.html 	modified:   application/views/profile.html 	new file:   application/views/resetPassword.html 	modified:   instance/data.db

--- a/application/views/layout.html
+++ b/application/views/layout.html
@@ -54,6 +54,10 @@
             width: 50px;
             height: 50px;
         }
+        .image-item{
+            width: 50px;
+            height: 130px;
+        }
 
         div.pagination.box {
             border: 1px solid black;
@@ -216,6 +220,9 @@
         }
         .post-header img{
             border-radius: 50%;
+        }
+        h2{
+            text-align: center;
         }
     </style>
     {% if title %}
