--- a/application/views/login.html
+++ b/application/views/login.html
@@ -41,7 +41,7 @@
             <div class="">
                 {{ form.submit(class="btn btn-outline-info") }}
                 <small class="forgot">
-                    <a href="#">Forgot Password?</a>
+                    <a href="{{ url_for('forgotPass')}}">Forgot Password?</a>
                 </small>
             </div>
             <small class="">
