--- a/application/views/index.html
+++ b/application/views/index.html
@@ -15,6 +15,7 @@
                 <span id="likeBtn" data-post-id="{{ post.id }}">Likes</span><span id="likeCounter"> {{ post.likes | length }} </span>
                 <span id="commentBtn" data-post-id="{{ post.id }}">Comments</span><span id="commentCounter"> {{ post.comments | length }}</span>
             </div>
+            <a href="{{ url_for('edit_post', post_id=post.id) }}">EDIT POST</a>
         </div>
         {% endfor %}
     </div>
@@ -23,7 +24,7 @@
             btn.addEventListener('click', function(){
                 console.log(this.dataset.postId);
                 const xhr = new XMLHttpRequest();
-                xhr.open('POST', `/like/${this.dataset.postId}`, true);
+                xhr.open('POST', 'http://127.0.0.1:5000/like', true);
                 xhr.setRequestHeader('Content-Type', 'application/json;charset=UTF-8');
 
                 xhr.onload = function(){
@@ -32,8 +33,8 @@
                         console.log(response.status);
                     }
                 };
-
-                xhr.send();
+                const data = JSON.stringify({ 'postId': this.dataset.postId })
+                xhr.send(data);
             })
         })
     </script>
