modified:   application/__init__.py 	modified:   application/__pycache__/__init__.cpython-311.pyc 	modified:   application/views/about.html 	modified:   instance/data.db

--- a/application/views/about.html
+++ b/application/views/about.html
@@ -1,6 +1,8 @@
 {% extends 'layout.html' %}
 
 {% block content %}
+    <h2>ABOUT INSSSTA</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quod inventore natus quam voluptatibus distinctio qui, autem fugiat deleniti excepturi!</p>
     <!-- <body>
         <header>
             <h1>INSSSTA</h1>
